Retrieve journal info and display it in events.html & fix max height for collapse accordion

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10220,3 +10220,8 @@ height: 40%;
 .card-accordion{
     margin: 10px 20px 10px 20px;
 }
+
+.collapse.in, .collapse{
+  height: 150px;
+  overflow-y: scroll;
+}
